media/error_tc/error_240.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_VgwWzdV.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_VgwWzdV.cpp:8:1: error: expected ';' before '}' token
 }
 ^
